spargen/tests/snapshots/snapshot__github_api_3_1.snap
---
source: spargen/tests/snapshot.rs
expression: summary(&report)
---
outcome: Generated
diagnostics (code: count):
  W001: 207
  W002: 1
  W005: 6
  W011: 2
  W014: 7
