spargen/tests/snapshots/snapshot__github_api_3_1_carve.snap
---
source: spargen/tests/snapshot.rs
expression: summary(&report)
---
outcome: Generated
diagnostics (code: count):
  W001: 43
  W002: 1
  W005: 5
  W009: 95
