spargen/tests/snapshots/snapshot__mastodon_openapi.snap
---
source: spargen/tests/snapshot.rs
expression: summary(&report)
---
outcome: Generated
diagnostics (code: count):
  W001: 2
  W002: 12
