spargen/tests/snapshots/snapshot__meilisearch.snap
---
source: spargen/tests/snapshot.rs
expression: summary(&report)
---
outcome: Rejected
diagnostics (code: count):
  E011: 15
