spargen/tests/snapshots/snapshot__ollama.snap
---
source: spargen/tests/snapshot.rs
expression: summary(&report)
---
outcome: Generated
diagnostics (code: count):
  W001: 1
  W014: 5
