spargen/tests/snapshots/snapshot__ollama_surface.snap
---
source: spargen/tests/snapshot.rs
expression: api_surface(&source)
---
operations (12):
  chat
  copy
  create
  delete
  embed
  generate
  list
  ps
  pull
  push
  show
  version
types (258):
  BlockingClient
  ChatError
  Client
  CopyError
  CreateError
  DeleteError
  EmbedError
  GenerateError
  ListError
  PsError
  PullError
  PushError
  ShowError
  VersionError
  servers::Server0
  types::ChatMessage
  types::ChatMessagecontent
  types::ChatMessageimages
  types::ChatMessageimagesItem
  types::ChatMessagerole
  types::ChatMessagetoolCalls
  types::ChatRequest
  types::ChatRequestformat
  types::ChatRequestformatVariant0
  types::ChatRequestformatVariant1
  types::ChatRequestkeepAlive
  types::ChatRequestkeepAliveVariant0
  types::ChatRequestkeepAliveVariant1
  types::ChatRequestlogprobs
  types::ChatRequestmessages
  types::ChatRequestmodel
  types::ChatRequeststream
  types::ChatRequestthink
  types::ChatRequestthinkVariant0
  types::ChatRequestthinkVariant1
  types::ChatRequesttools
  types::ChatRequesttopLogprobs
  types::ChatResponse
  types::ChatResponsecreatedAt
  types::ChatResponsedone
  types::ChatResponsedoneReason
  types::ChatResponseevalCount
  types::ChatResponseevalDuration
  types::ChatResponseloadDuration
  types::ChatResponselogprobs
  types::ChatResponsemessage
  types::ChatResponsemessagecontent
  types::ChatResponsemessageimages
  types::ChatResponsemessageimagesItem
  types::ChatResponsemessagerole
  types::ChatResponsemessagethinking
  types::ChatResponsemessagetoolCalls
  types::ChatResponsemodel
  types::ChatResponsepromptEvalCount
  types::ChatResponsepromptEvalDuration
  types::ChatResponsetotalDuration
  types::ChatStreamEvent
  types::ChatStreamEventcreatedAt
  types::ChatStreamEventdone
  types::ChatStreamEventmessage
  types::ChatStreamEventmessagecontent
  types::ChatStreamEventmessageimages
  types::ChatStreamEventmessageimagesItem
  types::ChatStreamEventmessagerole
  types::ChatStreamEventmessagethinking
  types::ChatStreamEventmessagetoolCalls
  types::ChatStreamEventmodel
  types::CopyRequest
  types::CopyRequestdestination
  types::CopyRequestsource
  types::CreateRequest
  types::CreateRequestfrom
  types::CreateRequestlicense
  types::CreateRequestlicenseVariant0
  types::CreateRequestlicenseVariant1
  types::CreateRequestlicenseVariant1Item
  types::CreateRequestmessages
  types::CreateRequestmodel
  types::CreateRequestparameters
  types::CreateRequestquantize
  types::CreateRequeststream
  types::CreateRequestsystem
  types::CreateRequesttemplate
  types::DeleteRequest
  types::DeleteRequestmodel
  types::EmbedRequest
  types::EmbedRequestdimensions
  types::EmbedRequestinput
  types::EmbedRequestinputVariant0
  types::EmbedRequestinputVariant1
  types::EmbedRequestinputVariant1Item
  types::EmbedRequestkeepAlive
  types::EmbedRequestmodel
  types::EmbedRequesttruncate
  types::EmbedResponse
  types::EmbedResponseembeddings
  types::EmbedResponseembeddingsItem
  types::EmbedResponseembeddingsItemItem
  types::EmbedResponseloadDuration
  types::EmbedResponsemodel
  types::EmbedResponsepromptEvalCount
  types::EmbedResponsetotalDuration
  types::ErrorResponse
  types::ErrorResponseerror
  types::GenerateRequest
  types::GenerateRequestformat
  types::GenerateRequestformatVariant0
  types::GenerateRequestformatVariant1
  types::GenerateRequestimages
  types::GenerateRequestimagesItem
  types::GenerateRequestkeepAlive
  types::GenerateRequestkeepAliveVariant0
  types::GenerateRequestkeepAliveVariant1
  types::GenerateRequestlogprobs
  types::GenerateRequestmodel
  types::GenerateRequestprompt
  types::GenerateRequestraw
  types::GenerateRequeststream
  types::GenerateRequestsuffix
  types::GenerateRequestsystem
  types::GenerateRequestthink
  types::GenerateRequestthinkVariant0
  types::GenerateRequestthinkVariant1
  types::GenerateRequesttopLogprobs
  types::GenerateResponse
  types::GenerateResponsecreatedAt
  types::GenerateResponsedone
  types::GenerateResponsedoneReason
  types::GenerateResponseevalCount
  types::GenerateResponseevalDuration
  types::GenerateResponseloadDuration
  types::GenerateResponselogprobs
  types::GenerateResponsemodel
  types::GenerateResponsepromptEvalCount
  types::GenerateResponsepromptEvalDuration
  types::GenerateResponseresponse
  types::GenerateResponsethinking
  types::GenerateResponsetotalDuration
  types::GenerateStreamEvent
  types::GenerateStreamEventcreatedAt
  types::GenerateStreamEventdone
  types::GenerateStreamEventdoneReason
  types::GenerateStreamEventevalCount
  types::GenerateStreamEventevalDuration
  types::GenerateStreamEventloadDuration
  types::GenerateStreamEventmodel
  types::GenerateStreamEventpromptEvalCount
  types::GenerateStreamEventpromptEvalDuration
  types::GenerateStreamEventresponse
  types::GenerateStreamEventthinking
  types::GenerateStreamEventtotalDuration
  types::ListResponse
  types::ListResponsemodels
  types::Logprob
  types::Logprobbytes
  types::LogprobbytesItem
  types::Logproblogprob
  types::Logprobtoken
  types::LogprobtopLogprobs
  types::ModelOptions
  types::ModelOptionsminP
  types::ModelOptionsnumCtx
  types::ModelOptionsnumPredict
  types::ModelOptionsseed
  types::ModelOptionsstop
  types::ModelOptionsstopVariant0
  types::ModelOptionsstopVariant1
  types::ModelOptionsstopVariant1Item
  types::ModelOptionstemperature
  types::ModelOptionstopK
  types::ModelOptionstopP
  types::ModelSummary
  types::ModelSummarydetails
  types::ModelSummarydetailsfamilies
  types::ModelSummarydetailsfamiliesItem
  types::ModelSummarydetailsfamily
  types::ModelSummarydetailsformat
  types::ModelSummarydetailsparameterSize
  types::ModelSummarydetailsquantizationLevel
  types::ModelSummarydigest
  types::ModelSummarymodel
  types::ModelSummarymodifiedAt
  types::ModelSummaryname
  types::ModelSummaryremoteHost
  types::ModelSummaryremoteModel
  types::ModelSummarysize
  types::Ps
  types::PsResponse
  types::PsResponsemodels
  types::PscontextLength
  types::Psdetails
  types::Psdigest
  types::PsexpiresAt
  types::Psmodel
  types::Psname
  types::Pssize
  types::PssizeVram
  types::PullRequest
  types::PullRequestinsecure
  types::PullRequestmodel
  types::PullRequeststream
  types::PushRequest
  types::PushRequestinsecure
  types::PushRequestmodel
  types::PushRequeststream
  types::ShowRequest
  types::ShowRequestmodel
  types::ShowRequestverbose
  types::ShowResponse
  types::ShowResponsecapabilities
  types::ShowResponsecapabilitiesItem
  types::ShowResponsedetails
  types::ShowResponselicense
  types::ShowResponsemodelInfo
  types::ShowResponsemodifiedAt
  types::ShowResponseparameters
  types::ShowResponsetemplate
  types::StatusEvent
  types::StatusEventcompleted
  types::StatusEventdigest
  types::StatusEventstatus
  types::StatusEventtotal
  types::StatusResponse
  types::StatusResponsestatus
  types::TokenLogprob
  types::TokenLogprobbytes
  types::TokenLogprobbytesItem
  types::TokenLogproblogprob
  types::TokenLogprobtoken
  types::ToolCall
  types::ToolCallfunction
  types::ToolCallfunctionarguments
  types::ToolCallfunctiondescription
  types::ToolCallfunctionname
  types::ToolDefinition
  types::ToolDefinitionfunction
  types::ToolDefinitionfunctiondescription
  types::ToolDefinitionfunctionname
  types::ToolDefinitionfunctionparameters
  types::ToolDefinitiontype
  types::VersionResponse
  types::VersionResponseversion
  types::WebFetchRequest
  types::WebFetchRequesturl
  types::WebFetchResponse
  types::WebFetchResponsecontent
  types::WebFetchResponselinks
  types::WebFetchResponselinksItem
  types::WebFetchResponsetitle
  types::WebSearchRequest
  types::WebSearchRequestmaxResults
  types::WebSearchRequestquery
  types::WebSearchResponse
  types::WebSearchResponseresults
  types::WebSearchResult
  types::WebSearchResultcontent
  types::WebSearchResulttitle
  types::WebSearchResulturl
