spargen/tests/snapshots/snapshot__openai_openapi.snap
---
source: spargen/tests/snapshot.rs
expression: summary(&report)
---
outcome: Rejected
diagnostics (code: count):
  E009: 1
  W001: 263
  W002: 1
  W005: 64
  W011: 3
  W014: 21
