spargen/tests/snapshots/snapshot__openapi_boilerplate.snap
---
source: spargen/tests/snapshot.rs
expression: summary(&report)
---
outcome: Generated
diagnostics (code: count):
  (none)
