spargen/tests/snapshots/snapshot__openapi_boilerplate_surface.snap
---
source: spargen/tests/snapshot.rs
expression: api_surface(&source)
---
operations (3):
  create_pets
  list_pets
  show_pet_by_id
types (18):
  BlockingClient
  Client
  CreatePetsError
  ListPetsError
  ListPetsParams
  ListPetsStatus200Headers
  ShowPetByIdError
  servers::Server0
  types::Error
  types::Errorcode
  types::Errormessage
  types::HeaderxNext
  types::Limit
  types::Pet
  types::PetId
  types::Petid
  types::Petname
  types::Pettag
