spargen/tests/snapshots/snapshot__stripe.snap
---
source: spargen/tests/snapshot.rs
expression: summary(&report)
---
outcome: Rejected
diagnostics (code: count):
  E001: 1
